# dspy-cv-generator

./: README.md  pyproject.toml
data/: job_descriptions.csv
notebooks/: Original_scores.csv  extract_text.ipynb
