[tool.poetry]
name = "cv-analyser"
version = "0.1.0"
description = ""
authors = ["alexander <alexandergirardet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dspy-ai = "^2.4.0"
jupyterlab = "^4.1.5"
pymupdf = "^1.23.26"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
